[project]
name = "learn-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "email-validator>=2.3.0",
    "instructor>=1.11.2",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "langgraph-cli[inmem]>=0.4.1",
    "pydantic-ai>=1.0.1",
    "python-dotenv>=1.1.1",
]
